feat: implement booking management system with detail modal, admin dashboard, and backend services